--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,16 +18,11 @@ classifiers = [
     "Natural Language :: English",
     "Environment :: X11 Applications :: Qt",
     "Operating System :: OS Independent",
-    "Programming Language :: Python",
-    "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.7",
-    "Programming Language :: Python :: 3.8",
-    "Programming Language :: Python :: 3.9",
-    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python"
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.7,<3.11"
+python = ">=3.7"
 pydata-sphinx-theme = { version = ">=0.7.2,<0.9.0", optional = true }
 sphinx-panels = { version = "^0.6.0", optional = true }
 
